--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-toolbar></app-toolbar> <router-outlet></router-outlet>
+<app-toolbar></app-toolbar>
+<hr />
+
+<app-sidenav></app-sidenav>
+<hr />
+
+<app-card></app-card>
+<router-outlet></router-outlet>
